--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <script language="javascript" type="text/javascript" src="js/jquery.jqplot.min.js"></script>
         <script language="javascript" type="text/javascript" src="js/jqplot.canvasAxisLabelRenderer.min.js"></script>
         <script language="javascript" type="text/javascript" src="js/jqplot.canvasTextRenderer.min.js"></script>
-        <script language="javascript" type="text/javascript" src="js/jqplot.dateAxisRenderer.min.js"></script>
         <script language="javascript" type="text/javascript" src="js/jqplot.cursor.min.js"></script>
         <script language="javascript" type="text/javascript" src="js/jqplot.highlighter.min.js"></script>
         <link rel="stylesheet" type="text/css" href="css/jquery.jqplot.min.css" />
@@ -15,6 +14,7 @@
         
     </head>
 <body>
+    <div id="logo"><img src="img/minsk.png"></div>
     <div id="header">
         <h1>Обзор расходов бюджета города Минска</h1>
     </div>
