Добавить titles и таблицу с поправками в местные бюджеты.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="ru">
     <head>
-        <title>Бюджетное обозрение Республики Беларусь</title>
         <meta charset="utf-8">
+        <title>Бюджетное обозрение Республики Беларусь</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Бюджетное обозрение Республики
 		Беларусь. Гражданский мониторинг государственных финансов">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -51,6 +52,18 @@
         <section id="fszn">
         </section>
         <h3>Местные бюджеты</h3>
+        <p>Поправки в местные бюджеты с начала года:</p>
+        <table border="1">
+			
+			<thead>
+				<tr><th>Вид бюджета</th><th>Поправок</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr><td>Областные бюджеты</td><td>2</td></tr>
+				<tr><td>Базовые бюджеты</td><td>18</td></tr>
+			</tbody>
+		</table>
         <section id="local">
         </section>
     </main>
