Добавить titles и таблицу с поправками в местные бюджеты.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </section>
     </main>
     <footer>
-		<p id="impressum">Проект сообщества "<a href="http://opendata.by/projects/">Открытые данные для Беларуси</a>". Испытательная версия.</p>
+		<p id="impressum">Проект сообщества "<a href="http://opendata.by">Открытые данные для Беларуси</a>". Испытательная версия.</p>
 	</footer>
 		<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script src="js/script.js"></script>
